--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+#Unity Version Control
+.workflows
+/.plastic
